syntax = "proto3";  //版本声明 

package pb;  //proto文件模块 

option go_package = "hello_server/pb"; //项目中import导入生成的Go代码的名称 





//定义服务 
service Greeter{
    //定义方法 基本
    rpc SayHello(HelloRequest)returns(HelloResponse){}
    //流式
    // 服务端返回流式数据
    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);


    // 客户端发送流式数据
    rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);

    //双向流式
    // 双向流式数据
    rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);



}

//定义的消息 
message HelloRequest{
    string name = 1;  //字段符号 

}

message HelloResponse{
    string reply = 1;
}

// protoc --proto_path=pb  --go_out=pb  --go_opt=paths=source_relative --go-grpc_out=pb --go-grpc_opt=paths=source_relative pb/hello.proto